--- a/vege.html
+++ b/vege.html
@@ -81,7 +81,7 @@
 	<div class="position1">
 	<figure class="img_left">
         <!-- This information is taken from https://www.xiaohongshu.com/discovery/item/5ee70aee0000000001007d21?source=webshare&xhsshare=pc_web&xsec_token=ABrg9llraD9WAZFW9VvrABvfB4vBOYPX_6lscT_n1al64=&xsec_source=pc_share -->
-		<a href="../thewebchefs/vege/chinesevege.html" target="chinesevegerecipe_tab"><img src="images/recipe/chinesevege.jpg" alt="Chinese Vegetable Stir-fry" height="250px" width="250px"></a>
+		<a href="vege/chinesevege.html" target="chinesevegerecipe_tab"><img src="images/recipe/chinesevege.jpg" alt="Chinese Vegetable Stir-fry" height="250px" width="250px"></a>
 	</figure>
 
 	<table class="categories_page">
@@ -116,7 +116,7 @@
 	<div class="position2">
 	<figure class="img_right">
         <!-- This informationis taken from https://www.xiaohongshu.com/discovery/item/63000fea000000001b01b5a0?source=webshare&xhsshare=pc_web&xsec_token=AB74Uy2zKX9vi0XAMf5eeL53XDAnaK8ytbN4QRVOz8rTM=&xsec_source=pc_share -->
-		<a href="../thewebchefs/vege/greenbeans.html" target="greenbeansrecipe_tab"><img src="images/recipe/greenbean.jpg" alt="Green Beans with Ginger" height="250px" width="250px"></a>
+		<a href="vege/greenbeans.html" target="greenbeansrecipe_tab"><img src="images/recipe/greenbean.jpg" alt="Green Beans with Ginger" height="250px" width="250px"></a>
 	</figure>
 	
 	<table class="categories_page">
@@ -151,7 +151,7 @@
 	<div class="position3">
 	<figure class="img_left">
         <!-- This information id taken from https://www.xiaohongshu.com/discovery/item/62401fdc0000000021036098?source=webshare&xhsshare=pc_web&xsec_token=ABdSJyCBDcwFtLgorWHb0kOMLzoMFm181VLo2WmhxJHEs=&xsec_source=pc_share -->
-		<a href="../thewebchefs/vege/tomato.html" target="tomatorecipe_tab"><img src="images/recipe/tomato.jpg" alt="Tomato Egg Stir-fry" height="250px" width="250px"></a>
+		<a href="vege/tomato.html" target="tomatorecipe_tab"><img src="images/recipe/tomato.jpg" alt="Tomato Egg Stir-fry" height="250px" width="250px"></a>
 	</figure>
 	
 	<table class="categories_page">
@@ -186,7 +186,7 @@
 	<div class="position4">
 	<figure class="img_right">
         <!-- This information is taken from https://www.xiaohongshu.com/discovery/item/65fa4fa5000000001302429d?source=webshare&xhsshare=pc_web&xsec_token=AB9CdOubY8vW_9ziDTfx-ExNCRmxhRRyO13_BjmQjWSGM=&xsec_source=pc_share -->
-		<a href="../thewebchefs/vege/broccoli.html" target="broccolirecipe_tab"><img src="images/recipe/broccoli.jpg" alt="Broccoli with Soy Sauce" height="250px" width="250px"></a>
+		<a href="vege/broccoli.html" target="broccolirecipe_tab"><img src="images/recipe/broccoli.jpg" alt="Broccoli with Soy Sauce" height="250px" width="250px"></a>
 	</figure>
 	
 	<table class="categories_page">
