--- a/grain.html
+++ b/grain.html
@@ -80,7 +80,7 @@
 	<div class="position1">
 	<figure class="img_left">
         <!-- This information is taken from https://www.xiaohongshu.com/discovery/item/6600eda2000000001203fda0?source=webshare&xhsshare=pc_web&xsec_token=ABstnQNXJsfIid3Qa-ZbMoYSWJ6F8LamzHxk37R4LDExA=&xsec_source=pc_share -->
-		<a href="../thewebchefs/grainproduct/rice.html" target="ricerecipe_tab"><img src="images/recipe/rice.jpg" alt="Egg Fried Rice Cuisine" height="250px" width="250px"></a>
+		<a href="grainproduct/rice.html" target="ricerecipe_tab"><img src="images/recipe/rice.jpg" alt="Egg Fried Rice Cuisine" height="250px" width="250px"></a>
 	</figure>
 
 	<table class="categories_page">
@@ -115,7 +115,7 @@
 	<div class="position2">
 	<figure class="img_right">
         <!-- This information is taken from https://media01.stockfood.com/largepreviews/NDA5Mjg1NTYw/13202760-Ba-bao-Zhou-sweet-porridge-with-red-mung-beans-China.jpg -->
-		<a href="../thewebchefs/grainproduct/porridge.html" target="porridgerecipe_tab"><img src="images/recipe/porridge.jpg" alt="Ba Bao Porridge" height="250px" width="250px"></a>
+		<a href="grainproduct/porridge.html" target="porridgerecipe_tab"><img src="images/recipe/porridge.jpg" alt="Ba Bao Porridge" height="250px" width="250px"></a>
 	</figure>
 	
 	<table class="categories_page">
@@ -150,7 +150,7 @@
 	<div class="position3">
 	<figure class="img_left">
         <!-- This information is taken from https://www.xiaohongshu.com/discovery/item/66d34d1d000000001f01ba09?source=webshare&xhsshare=pc_web&xsec_token=AB6Euh1P3UDglhrwY57KCJOAqqDJ6Sq_DF2BeZFhRu4Ks=&xsec_source=pc_share -->
-		<a href="../thewebchefs/grainproduct/mee.html" target="meerecipe_tab"><img src="images/recipe/mee.jpg" alt="Cantonese Yee Mee" height="250px" width="250px"></a>
+		<a href="grainproduct/mee.html" target="meerecipe_tab"><img src="images/recipe/mee.jpg" alt="Cantonese Yee Mee" height="250px" width="250px"></a>
 	</figure>
 	
 	<table class="categories_page">
@@ -185,7 +185,7 @@
 	<div class="position4">
 	<figure class="img_right">
         <!-- This information is taken from https://lh4.googleusercontent.com/p5ssOrf5FCrT4_oALHESiGYIMj4adWGtR2EJJtE8hLxoHi7Ce5-2GHB3zQdvWr9oZooIezd7deOuTrAmsH0M30O7U31TcsC9UGD8EfmypPd9MUM1hT5OdRUOyBVEFukj_CG3qiUt -->
-		<a href="../thewebchefs/grainproduct/noodle.html" target="noodlerecipe_tab"><img src="images/recipe/noodle.jpg" alt="Chinese Stir-fried noodles" height="250px" width="250px"></a>
+		<a href="grainproduct/noodle.html" target="noodlerecipe_tab"><img src="images/recipe/noodle.jpg" alt="Chinese Stir-fried noodles" height="250px" width="250px"></a>
 	</figure>
 	<table class="categories_page">
 		<tr>
