--- a/meat.html
+++ b/meat.html
@@ -80,7 +80,7 @@
 	<div class="position1">
 	<figure class="img_left">
         <!-- This information is taken from https://img.buzzfeed.com/thumbnailer-prod-us-east-1/aa2dffba333842628649b06c0aad70db/CUT2.jpg -->
-		<a href="meat/pork.html" target="porkrecipe_tab"><img src="images/recipe/pork.jpg" alt="Sweet and Sour Pork" height="250px" width="250px"></a>
+		<a href="meat/pork.html" target="meat_tab"><img src="images/recipe/pork.jpg" alt="Sweet and Sour Pork" height="250px" width="250px"></a>
 	</figure>
 
 	<table class="categories_page">
@@ -115,7 +115,7 @@
 	<div class="position2">
 	<figure class="img_right">
         <!-- This information is taken from https://www.xiaohongshu.com/discovery/item/65bdbd2e0000000002012e54?source=webshare&xhsshare=pc_web&xsec_token=ABEsvpy3iZv2cGI8_ggWb-Lll8vOPOPW2KxcoxPMp-mNU=&xsec_source=pc_share -->
-		<a href="meat/kungbao.html" target="kungbaorecipe_tab"><img src="images/recipe/kungbao.jpg" alt="Kung Bao Chicken " class="article_img" height="250px" width="250px"></a>
+		<a href="meat/kungbao.html" target="meat_tab"><img src="images/recipe/kungbao.jpg" alt="Kung Bao Chicken " class="article_img" height="250px" width="250px"></a>
 	</figure>
 	
 	<table class="categories_page">
@@ -150,7 +150,7 @@
 	<div class="position3">
 	<figure class="img_left">
         <!-- This informatio is taken from https://pic.huitu.com/pic/20211126/1101040_20211126130425543060_0.jpg -->
-		<a href="meat/stewed.html" target="stewedrecipe_tab"><img src="images/recipe/stewed.jpg" alt="Stewed Chicken with Chestnuts" height="250px" width="250px"></a>
+		<a href="meat/stewed.html" target="meat_tab"><img src="images/recipe/stewed.jpg" alt="Stewed Chicken with Chestnuts" height="250px" width="250px"></a>
 	</figure>
 	
 	<table class="categories_page">
@@ -185,7 +185,7 @@
 	<div class="position4">
 	<figure class="img_right">
         <!-- This information is taken from https://food-images.files.bbci.co.uk/food/recipes/whole_sea_bass_baked_on_19811_16x9.jpg -->
-		<a href="meat/seabass.html" target="seabassrecipe_tab"><img src="images/recipe/seabass.jpg" alt="Baked Sea Bass with Lemon Grass" height="250px" width="250px"></a>
+		<a href="meat/seabass.html" target="meat_tab"><img src="images/recipe/seabass.jpg" alt="Baked Sea Bass with Lemon Grass" height="250px" width="250px"></a>
 	</figure>
 	
 	<table class="categories_page">
