--- a/meat/stewed.html
+++ b/meat/stewed.html
@@ -126,7 +126,7 @@
 		<li>1/2 tsp salt</li>
 		<li>1 tsp sugar</li>
 		<li>2 tsps light soy sauce</li>
-		1/2 tbsp oyster sauce</li>
+		<li>1/2 tbsp oyster sauce</li>
 		<li>1½ cups water</li>
 		<li>3/4 tsp corn flour</li>
 		<li>2 tbsps water</li>
