--- a/vege/tomato.html
+++ b/vege/tomato.html
@@ -71,7 +71,7 @@
 	
 <article class="lightgreenbackground">
 <!--PlanPal button that links to the webpage-->
-		<a href="planpal.html" target="plan_tab"><img src="../images/robot.png" alt="PlanPal Button" height="100em" class="planpalbutton"></a>
+		<a href="../planpal.html" target="plan_tab"><img src="../images/robot.png" alt="PlanPal Button" height="100em" class="planpalbutton"></a>
 	<div class="recipe_top">
 
     <!-- This image is taken from
